# tf-gatekeeper

./: .gitignore  DEVELOPMENT.md  README.md  ai_analyzer.py  config.yaml  extract_plan.sh  gatekeeper.py  main.tf  plan.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.md  test_deletions.py  test_gatekeeper.py  test_time_rules.py  tf-gate.yaml  tfplan.json  todo.md  variables.tf
modules/vpc/: main.tf
policies/: cost.rego  protected.rego  protected_resources.rego  security.rego
src/tf_gate/: __init__.py  cli.py
src/tf_gate/phases/: __init__.py  phase1_ingest.py  phase2_opa.py  phase3_context.py  phase4_intent.py
src/tf_gate/utils/: __init__.py  blast_radius.py  config.py  git.py  opa.py
test_plans/: README.md  test_results.json  test_runner.py  tfplan_green.json  tfplan_red.json  tfplan_yellow.json
test_plans/reports/: tfplan_green_report_20260208_163114.md  tfplan_red_report_20260208_163146.md  tfplan_yellow_report_20260208_163127.md
