[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tf-gate"
version = "0.1.0"
description = "A multi-layered defense system that gates terraform apply behind contextual safety checks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Terraform Gatekeeper Team"},
]
keywords = ["terraform", "security", "policy", "opa", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.0.0",
    "ijson>=3.2.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-pyyaml",
    "types-requests",
    "types-python-dateutil",
]

opa = [
    "opa-python>=0.3.0",
]

llm = [
    "ollama>=0.1.0",
    "openai>=1.0.0",
]

[project.scripts]
tf-gate = "tf_gate.cli:main"
tfgate = "tf_gate.cli:main"

[project.urls]
Homepage = "https://github.com/anomalyco/tf-gatekeeper"
Repository = "https://github.com/anomalyco/tf-gatekeeper"
Issues = "https://github.com/anomalyco/tf-gatekeeper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tf_gate"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/policies",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.terraform
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "\.venv",
    "\.terraform",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "ijson.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opa.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=tf_gate",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/tf_gate"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
